crates/shipper-policy/src/snapshots/shipper_policy__serialization_snapshot_tests__all_policy_kinds.snap
---
source: crates/shipper-policy/src/lib.rs
expression: "vec![PolicyKind::Safe, PolicyKind::Balanced, PolicyKind::Fast,]"
---
- Safe
- Balanced
- Fast
