crates/shipper-policy/src/snapshots/shipper_policy__serialization_snapshot_tests__balanced_policy_effects_default.snap
---
source: crates/shipper-policy/src/lib.rs
expression: effects
---
run_dry_run: true
check_ownership: false
strict_ownership: false
readiness_enabled: true
